# ferrite

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .style.yapf  CMakeLists.txt  LICENSE  Makefile  Pipfile  README.md  deploy.sh  main.c  manage.py  proto.h  pyproject.toml  requirements.txt
app/: CMakeLists.txt  TODO.md  armgcc.cmake  conanfile.txt
app/src/: device.hpp  encoder.hpp  framework.cpp  framework.hpp
app/src/channel/: base.cpp  base.hpp  rpmsg.cpp  rpmsg.hpp  zmq.cpp  zmq.hpp  zmq_test.cpp
app/src/core/: assert.hpp  io_test.cpp  lazy_static.hpp  maybe_uninit.hpp  mpsc.hpp  panic.cpp  panic.hpp  result.hpp
app/src/record/: aao.hpp  analogArrayIO.cpp  analogArrayIO.hpp  array.hpp  base.cpp  base.hpp  iointr.cpp  iointr.hpp  ioscan.cpp  ioscan.hpp  mbbIODirect.cpp  mbbIODirect.hpp  recordDebugBuild.hpp  value.hpp  waveform.cpp  waveform.hpp
codegen/: CMakeLists.txt  __main__.py  base.py  codegen.py  container.py  prim.py  struct.py  test.py  text.py  variant.py
common/ipp/: CMakeLists.txt  __init__.py  __main__.py  base.py  codegen.py  container.py  prim.py  serialize.py  struct.py  test.cpp  types.py  util.py  variant.py
common/ipp/src/: ipp.c  ipp.cpp  ipp.h  ipp.hpp  test.cpp
example/: .gitignore  .gitlab-ci.yml  pyproject.toml
example/example/backend/: .gitignore  __init__.py  test.py
example/example/ci/gitlab/: generate.py
example/example/components/: app.py  backend.py  fakedev.py  frontend.py  ioc.py  protocol.py  tree.py
example/example/ioc/: protocol.py  test.py
example/example/manage/: __main__.py
example/example/protocol/: __init__.py  __init__.pyi
example/misc/check/: mypy.sh
example/source/app/: Cargo.toml  build.rs
example/source/app/src/: lib.rs
ioc/: .gitignore  CMakeLists.txt  README.md
ioc/PSCApp/Db/: Makefile  devPSC.db  devPSC.substitutions  inp_register.db  inp_register.substitutions  inp_waveform.db  inp_waveform.substitutions  out_register.db  out_register.substitutions  out_waveform.db  out_waveform.substitutions
ioc/PSCApp/src/: Makefile  PSCMain.cpp
ioc/PSCSup/: Makefile  aai.cpp  aai.hpp  aaiDevSupp.cpp  aai_dev_supp.cpp  aao.cpp  aaoDevSupp.cpp  aao_dev_supp.cpp  ai.cpp  ai.hpp  analogArrayIO.cpp  analogArrayIO.hpp  ao.cpp  ao.hpp  array.hpp  base.cpp  base.hpp  bi_dev_supp.cpp  bo_dev_supp.cpp  channel_rpmsg.cpp  channel_rpmsg.hpp  channel_zmq.cpp  channel_zmq.hpp  channel_zmq_test.cpp  devPSC.cpp  devPSC.db  devPSC.dbd  device.hpp  encoder.hpp  framework.cpp  framework.hpp  iointr.cpp  iointrScanWorkers.cpp  iointrScanWorkers.hpp  mbbIODirect.cpp  mbbIODirect.hpp  mbbiDirectDevSupp.cpp  mbbi_direct.cpp  mbbi_direct.hpp  mbboDirectDevSupp.cpp  (+12 more)
ioc/PSCSup/channel/: base.hpp  rpmsg.hpp  rpmsg_channel.hpp  zmq.cpp  zmq.hpp  zmq_channel.hpp  zmq_test.cpp
ioc/PSCSup/core/: format.hpp  lazy_static.hpp  mutex.hpp  panic.hpp  result.hpp
ioc/PSCSup/record/: waveform_record.hpp
ioc/PSCSup/utils/: exception.hpp  format.hpp  mutex.hpp  panic.hpp
ioc/configure/: CONFIG_SITE  RELEASE
ioc/iocBoot/iocPSC/: st.cmd
ioc/tests/: fakedev.py
ipp/: CMakeLists.txt  __init__.py  codegen.py
ipp/src/: ipp.c  ipp.hpp  test.cpp
mcu/common/: CMakeLists.txt
mcu/common/include/common/: main.h
mcu/common/src/: crc.c  main.c
mcu/hal/: CMakeLists.txt  rpmsg.h  spi.h
mcu/hal/imx7/: rpmsg.c
mcu/hal/imx8mn/: rpmsg.c
mcu/hal/include/hal/: assert.h  defs.h  gpt.h  io.h  log.h  panic.h  spi.h  time.h
mcu/hal/src/: io.c  panic.c
mcu/hal/src/hal/: defs.h  gpt.h  rpmsg.h  spi.h
mcu/hal/src/imx7/: spi.c
mcu/hal/src/imx8mn/: gpt.c  rpmsg.c  spi.c
mcu/imx7/: CMakeLists.txt
mcu/imx7/src/: app_debug.c  app_debug.h  app_flexcan.h  app_gpio.h  main.c  senkov.c  senkov.h
mcu/imx7/src/app/: app_debug.h  app_ecspi.h
mcu/imx8mn/: CMakeLists.txt  README.md  flags.cmake
mcu/imx8mn/src/: main.c  pin_mux.c  pin_mux.h  skifio.c  skifio.h
source/app/: CMakeLists.txt  Cargo.toml  TODO.md
source/app/base/: CMakeLists.txt  Cargo.toml
source/app/base/src/: lib.rs  sys.rs
source/app/base_rpmsg/: CMakeLists.txt
source/app/base_test/: CMakeLists.txt
source/app/base_test/src/: zmq.cpp
source/app/base_zmq/: CMakeLists.txt
source/app/cmake/config/: CMakeLists.txt
source/app/example/: CMakeLists.txt  Cargo.toml
source/app/example/src/: framework.cpp  lib.rs  main.rs
source/app/rpmsg/: CMakeLists.txt
source/app/src/: device.cpp  device.hpp  encoder.hpp  framework.cpp  framework.hpp  handlers.hpp  lib.rs
source/app/src/channel/: base.cpp  base.hpp  message.hpp  read.rs  rpmsg.hpp  tests.rs  write.rs  zmq.cpp  zmq.hpp  zmq_test.cpp
source/app/src/core/: cast.cpp  io.cpp  io.hpp  lazy_static.hpp  mutex.hpp  result.hpp
source/app/src/misc/: async_counter.rs  async_flag.rs  double_vec.rs  mod.rs  tests.rs
source/app/src/raw/: export.rs  import.rs  variable.rs
source/app/src/record/: array.hpp
source/app/src/variable/: any.rs  atomic.rs  mod.rs  read.rs  read_array.rs  registry.rs  typing.rs  write.rs  write_array.rs
source/app/test/: CMakeLists.txt  conanfile.toml  conanfile.txt
source/app/test/src/: main.cpp  zmq.cpp
source/app/zmq/: CMakeLists.txt  conanfile.txt
source/codegen/: CMakeLists.txt
source/codegen/c/: CMakeLists.txt
source/codegen/c/src/: codegen_assert.h
source/codegen/rust/: Cargo.toml  build.rs
source/codegen/rust/src/: lib.rs  utils.rs
source/codegen/test/: CMakeLists.txt  conanfile.toml
source/core/: CMakeLists.txt  TODO.md
source/core/src/core/: assert.hpp  cast.hpp  convert.hpp  fmt.hpp  format.hpp  io.cpp  io.hpp  lazy_static.hpp  log.hpp  match.hpp  maybe_uninit.hpp  mutex.hpp  numeric.hpp  option.hpp  panic.cpp  panic.hpp  print.hpp  result.hpp  slice.hpp  stream.cpp  stream.hpp
source/core/test/: CMakeLists.txt
source/core/test/src/: cast.cpp  convert.cpp  fmt.cpp  format.cpp  io.cpp  numeric.cpp  print.cpp
source/ipp/: CMakeLists.txt
source/mcu/common/: CMakeLists.txt
source/mcu/common/include/: crc.h
source/mcu/hal/: CMakeLists.txt
source/mcu/hal/src/: atomic.c  defs.c  io.c  log.c  time.c
source/protogen/c/: CMakeLists.txt
(+484 files in other folders)
