[tool.poetry]
name = "vortex"
version = "0.1.0"
description = "Heterogenous build automation tool"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"
types-toml = "^0.10.4"
paramiko = "^2.9.2"
types-paramiko = "^2.8.10"
colorama = "^0.4.4"
types-colorama = "^0.4.4"
dataclass-type-validator = "^0.1.2"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.mypy]
strict = true
namespace_packages = true
