[tool.poetry]
name = "example"
version = "0.0.0"
description = "Ferrite usage example"
authors = ["Alexey Gerasev <a.v.gerasyov@inp.nsk.su>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ferrite = { path = "..", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
namespace_packages = true
